# bleplot

./: .gitignore  CLAUDE.md  build.bat  build.sh  pyproject.toml
src/bleplot/: app.py  ble_manager.py  data_store.py  main.py  parser.py  serialization.py  theme.py
src/bleplot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/bleplot/ui/: ble_monitor.py  data_panel.py  plot.py  plot_monitor.py
tests/: test_data_store.py  test_parser.py
tools/: ble_simulator.py
